--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,16 @@ subprojects {
         it.classpath = sourceSets.main.compileClasspath
     }
 
+    configurations.all {
+        // Stop comsat-jax-rs-client pulling this in as it then depends on a newer/conflicting version
+        // of jetty than karyon-admin.
+        exclude group: 'org.glassfish.jersey.connectors', module:'jersey-jetty-connector'
+
+        // Exclude old v2.5 of servlet-api.
+        exclude group:'javax.servlet', module:'servlet-api'
+        exclude group:'org.mortbay.jetty', module:'servlet-api'
+    }
+
     dependencies {
         ext.versions_guice = "4.0"
 
