--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,10 @@
 versions_jersey=1.19
 versions_karyon=1.0.+
 versions_karyon2=2.7.+
+versions_astyanax=1.56.48
+versions_archauis=0.6.0
+versions_governator=1.6.+
 versions_groovy=2.3.10
 versions_netty=4.0.+
 versions_rxnetty=0.4.+
-versions_jetty9=9.3.1.v20150714
+versions_jetty9=9.3.+
